Edition of movies

--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -23,7 +23,7 @@
 	<table id='locations_sync' 
 	       class='table table-striped no_table-bordered table-hover' 
 	       data-remove-subtitle-url='{%url "#lsync_subtitle_remove" %}' 
-	       data-update-movie-url='{%url "#locations_sync_add" %}' 
+	       data-edit-movie-url='{%url "#locations_sync_edit" %}' 
 	       data-location-id='{{location.id}}'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
