--- a/movies/templates/locations_sync_movie.html
+++ b/movies/templates/locations_sync_movie.html
@@ -2,12 +2,12 @@
     <td rowspan='{{lensubs}}'>
         {%if db_id %}
             {%if in_fs %}
-            <a class="btn btn-mini btn-color-yellow" href="#"><i class="icon-pencil"></i>
+            <a class="btn btn-mini btn-color-yellow edit-movie" href="#"><i class="icon-pencil"></i>
             {% else %}
             <a class="btn btn-mini btn-color-red" href="#"><i class="icon-minus"></i>
             {% endif %}
         {% else %}
-            <a class="btn btn-mini btn-color-green add-path" href="#"><i class="icon-plus"></i>
+            <a class="btn btn-mini btn-color-green edit-movie" href="#"><i class="icon-plus"></i>
         {% endif %}
     </td>
     <td rowspan='{{lensubs}}'>
