--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -24,6 +24,7 @@
 	       class='table table-striped no_table-bordered table-hover' 
 	       data-remove-subtitle-url='{%url "#lsync_subtitle_remove" %}' 
 	       data-edit-movie-url='{%url "#locations_sync_edit" %}' 
+	       data-remove-movie-url='{%url "#locations_sync_remove" %}' 
 	       data-location-id='{{location.id}}'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
