--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -22,6 +22,8 @@
 	
 	<table id='locations_sync' 
 	       class='table table-striped no_table-bordered table-hover' 
+	       data-fetch-subtitle-url='{%url "#lsync_subtitle_fetch" %}' 
+	       data-edit-subtitle-url='{%url "#lsync_subtitle_edit" %}' 
 	       data-remove-subtitle-url='{%url "#lsync_subtitle_remove" %}' 
 	       data-edit-movie-url='{%url "#locations_sync_edit" %}' 
 	       data-remove-movie-url='{%url "#locations_sync_remove" %}' 
