--- a/movies/templates/locations_sync_movie.html
+++ b/movies/templates/locations_sync_movie.html
@@ -16,7 +16,7 @@
     </td>
     <td colspan='3'>
         {%if in_fs and db_id%}
-        <a class="btn btn-mini add_subtitle disabled" href="#">
+        <a class="btn btn-mini fetch-subtitle disabled" href="#">
             <i class="icon-plus"></i>
         </a>
         <span class='subtitles'>{{insubs}}</span>
