--- a/movies/templates/locations_sync_subtitle.html
+++ b/movies/templates/locations_sync_subtitle.html
@@ -1,11 +1,11 @@
 <tr class='subtitle'>
     <td>
         {%if in_fs %}          
-            <a class="btn btn-mini btn-color-{%if language%}yellow{%else%}green{%endif%} edit_subtitle" href="#">
+            <a class="btn btn-mini btn-color-{%if language%}yellow{%else%}green{%endif%} edit-subtitle" href="#">
                 <i class="icon-pencil"></i>
             </a>
         {%else%}
-            <a class="btn btn-mini btn-color-red remove_subtitle" href="#">
+            <a class="btn btn-mini btn-color-red remove-subtitle" href="#">
                 <i class="icon-minus"></i>
             </a>
         {%endif%}
