--- a/movies/templates/locations_subtitle_dialog.html
+++ b/movies/templates/locations_subtitle_dialog.html
@@ -3,6 +3,7 @@
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 			<div class='path'></div>
+			<div class='title'></div>
 		</div>
 		<div class="modal-body">
 			<input type='hidden' name='location.id' value='{{location.id}}'>
