--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -182,9 +182,6 @@ caption {
 #locations_sync .db-False {
   color: #0b0; }
 
-#locations_sync tr.location_updated {
-  color: blue; }
-
 #locations_sync td {
   vertical-align: top; }
 
@@ -201,7 +198,8 @@ caption {
 #locations_sync_problems_dialog .path-problem-2 {
   color: #0da; }
 
-#locations_sync .subtitles {
+#locations_sync .subtitles,
+#locations_sync .audios {
   font-size: 12px; }
 
 #locations_sync .missing_language {
