--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -29,10 +29,10 @@
 	       data-location-id='{{location.id}}'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
-			<tr><th>Op</th><th>Path &amp; Title</th><th colpan='3'>Subtitles</th></tr>
+			<tr><th>Op</th><th>Path &amp; Title</th><th>Audios</th><th colpan='3'>Subtitles</th></tr>
 		</thead>
 		<tbody>
-		    {% for path, title, in_fs, db_id, insubs, lensubs, subs in movies %}
+		    {% for movie in movies %}
 				{%include "locations_sync_movie.html"%}
 		    {% endfor %}
 		</tbody>
