--- a/movies/templates/locations_sync_subtitle.html
+++ b/movies/templates/locations_sync_subtitle.html
@@ -1,7 +1,7 @@
 <tr class='subtitle'>
     <td>
-        {%if in_fs %}          
-            <a class="btn btn-mini btn-color-{%if language%}yellow{%else%}green{%endif%} edit-subtitle" href="#">
+        {%if sub.in_fs %}          
+            <a class="btn btn-mini btn-color-{%if sub.language%}yellow{%else%}green{%endif%} edit-subtitle" href="#">
                 <i class="icon-pencil"></i>
             </a>
         {%else%}
@@ -10,12 +10,12 @@
             </a>
         {%endif%}
     </td>
-    <td class='path' {%if language %}data-language='{{language}}'{%endif%}>
-        {{path}}
+    <td class='path' {%if sub.language %}data-language='{{sub.language}}'{%endif%}>
+        {{sub.filename}}
     </td>
     <td class='subtitles'>
-        {%if language %}
-            {{language}}
+        {%if sub.language %}
+            {{sub.language}}
         {%else%}
             <div class='missing_language'>?</div>
         {%endif%}
