--- a/movies/scss/locations.scss
+++ b/movies/scss/locations.scss
@@ -60,3 +60,13 @@
   padding: 0px 10px;
 }
 
+
+#locations_sync img.ic_tooltip_img {
+  width: 30px;
+}
+
+#locations_sync .ic_title{
+  max-width: 150px;
+  font-weight: bold;
+}
+
