--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -206,6 +206,13 @@ caption {
   background: red;
   padding: 0px 10px; }
 
+#locations_sync img.ic_tooltip_img {
+  width: 30px; }
+
+#locations_sync .ic_title {
+  max-width: 150px;
+  font-weight: bold; }
+
 #dialog_imdb .path {
   font-family: "Courier New", Courier, monospace;
   font-size: 11px;
