--- a/movies/templates/locations_sync_movie.html
+++ b/movies/templates/locations_sync_movie.html
@@ -10,6 +10,13 @@
             <a class="btn btn-mini btn-color-green edit-movie" href="#"><i class="icon-plus"></i>
         {% endif %}
     </td>
+    <td class='ic_link' rowspan='{{movie.getSubtitlesLength}}'>
+        {% if movie.imdb_link and movie.image %}
+        <a href='http://www.imdb.com{{movie.imdb_link}}'>
+            <img src='{{movie.image}}' class='ic_tooltip_img'>
+        </a>
+        {%endif%}
+    </td>
     <td rowspan='{{movie.getSubtitlesLength}}'>
     	<div class='path {%if not movie.id %}db-False{%endif%}'>{{movie.path}}</div>
     	<div class='title ok-{{movie.in_fs}}'>{{movie.title}}</div>
@@ -19,10 +26,10 @@
     </td>
     <td colspan='3'>
         {%if movie.in_fs and movie.id%}
+        <div class='subtitles'>{{movie.embedded_subs}}</div>
         <a class="btn btn-mini fetch-subtitle disabled" href="#">
             <i class="icon-plus"></i>
         </a>
-        <span class='subtitles'>{{movie.embedded_subs}}</span>
         {%endif%}
     </td>
 </tr>
