--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -29,7 +29,7 @@
 	       data-location-id='{{location.id}}'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
-			<tr><th>Op</th><th>Path &amp; Title</th><th>Audios</th><th colpan='3'>Subtitles</th></tr>
+			<tr><th>Op</th><th>Cover</th><th>Path &amp; Title</th><th>Audios</th><th colpan='3'>Subtitles</th></tr>
 		</thead>
 		<tbody>
 		    {% for movie in movies %}
