--- a/movies/scss/locations.scss
+++ b/movies/scss/locations.scss
@@ -50,8 +50,8 @@
   color: #0da;
 }
 
-#locations_sync .subtitles,
-#locations_sync .audios{
+#locations_sync .in-subtitles,
+#locations_sync .in-audios{
   font-size: 12px;
 }
 
