--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -5,6 +5,7 @@
 	{%include "dialog_imdb.html"%}
 	{%include "locations_subtitle_dialog.html"%}
 	{%include "locations_subtitle_fetch_dialog.html"%}
+	{%include "movie_edition_lang_dialog.html"%}
 
 	<div id='locations_sync_problems_dialog' class="modal hide fade container" tabindex='-1'>
 		<div class="modal-header">
