--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -198,8 +198,8 @@ caption {
 #locations_sync_problems_dialog .path-problem-2 {
   color: #0da; }
 
-#locations_sync .subtitles,
-#locations_sync .audios {
+#locations_sync .in-subtitles,
+#locations_sync .in-audios {
   font-size: 12px; }
 
 #locations_sync .missing_language {
