--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -21,6 +21,7 @@
     <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/vendor/messenger/js/messenger.min.js"></script>
     <script src="/static/vendor/messenger/js/messenger-theme-future.js"></script>
+    <script src="/static/movie_edition.js"></script>
     <script src="/static/locations.js"></script>
     <script src="/static/locations_sync.js"></script>
     <script src="/static/dialog_imdb.js"></script>
