--- a/movies/scss/locations.scss
+++ b/movies/scss/locations.scss
@@ -51,6 +51,7 @@
 }
 
 #locations_sync .in-subtitles,
+#locations_sync .subtitles,
 #locations_sync .in-audios{
   font-size: 12px;
 }
@@ -62,7 +63,7 @@
 
 
 #locations_sync img.ic_tooltip_img {
-  width: 30px;
+  width: 48px;
 }
 
 #locations_sync .ic_title{
