--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -23,11 +23,13 @@
 
 	
 	<table id='locations_sync' 
-	       class='table table-striped no_table-bordered table-hover' 
+	       class='table table-striped table-bordered table-hover' 
 	       data-remove-subtitle-url='{%url "#lsync_subtitle_remove" %}' 
+	       data-info-movie-url='{%url "#locations_sync_info"%}'
 	       data-edit-movie-url='{%url "#locations_sync_edit" %}' 
 	       data-remove-movie-url='{%url "#locations_sync_remove" %}' 
-	       data-location-id='{{location.id}}'>
+	       data-location-id='{{location.id}}'
+	       data-location-path='{{path}}'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
 			<tr><th>Op</th><th>Cover</th><th>Path &amp; Title</th><th>Audios</th><th colpan='3'>Subtitles</th></tr>
