--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -25,6 +25,7 @@
 	<table id='locations_sync' 
 	       class='table table-striped table-bordered table-hover' 
 	       data-remove-subtitle-url='{%url "#lsync_subtitle_remove" %}' 
+	       data-trash-subtitle-url='{%url "#lsync_subtitle_trash" %}' 
 	       data-info-movie-url='{%url "#locations_sync_info"%}'
 	       data-edit-movie-url='{%url "#locations_sync_edit" %}' 
 	       data-remove-movie-url='{%url "#locations_sync_remove" %}' 
