--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -27,6 +27,7 @@
     <script src="/static/dialog_imdb.js"></script>
     <script src="/static/dialog_confirm.js"></script>
     <script src="/static/movies_control.js"></script>
+    <script src="/static/subtitles_handling.js"></script>
     <script src="/static/ajax.js"></script>
     <script src="/static/global.js"></script>
     {% if messages %}
