--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -214,6 +214,9 @@ caption {
   max-width: 150px;
   font-weight: bold; }
 
+#subtitle_show {
+  display: none; }
+
 #dialog_imdb .path {
   font-family: "Courier New", Courier, monospace;
   font-size: 11px;
@@ -262,3 +265,33 @@ caption {
 
 #movies_control .ic_tooltip {
   cursor: pointer; }
+
+#subtitles-file-content {
+  width: 90%;
+  margin: 20px auto; }
+
+#subtitles-content th,
+#subtitles-content-errors th {
+  text-align: center; }
+
+#subtitles-content .period,
+#subtitles-content-errors .line-number {
+  text-align: center; }
+
+#subtitles-content-errors caption,
+#subtitles-content-errors th,
+#subtitles-file-content .error {
+  color: #a00; }
+
+#subtitles-file-content .error {
+  text-align: center;
+  font-size: 140%;
+  width: 100%;
+  padding: 12px 0px;
+  margin-bottom: 24px;
+  border: 2px solid #aa0000; }
+
+#subtitles-file-content form {
+  padding: 12px 60px;
+  float: right;
+  border: 1px solid #cccccc; }
