--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -7,6 +7,14 @@
 	{%include "locations_subtitle_fetch_dialog.html"%}
 	{%include "movie_edition_lang_dialog.html"%}
 
+	<form id='subtitle_show' target='_blank' method='post' action="{%url '#subtitle_show'%}">{% csrf_token %}
+	  <input type='hidden' name='location.id' value='{{location.id}}'>
+	  <input type='hidden' name='location.path' value='{{path}}'>
+	  <input type='hidden' name='subtitle.path'>
+	  <input type='hidden' name='movie.id'>
+	  <input type='submit'>
+	</form>
+
 	<div id='locations_sync_problems_dialog' class="modal hide fade container" tabindex='-1'>
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -24,13 +32,14 @@
 	
 	<table id='locations_sync' 
 	       class='table table-striped table-bordered table-hover' 
-	       data-remove-subtitle-url='{%url "#lsync_subtitle_remove" %}' 
-	       data-trash-subtitle-url='{%url "#lsync_subtitle_trash" %}' 
+	       data-location-id='{{location.id}}'
+	       data-location-path='{{path}}'
 	       data-info-movie-url='{%url "#locations_sync_info"%}'
 	       data-edit-movie-url='{%url "#locations_sync_edit" %}' 
 	       data-remove-movie-url='{%url "#locations_sync_remove" %}' 
-	       data-location-id='{{location.id}}'
-	       data-location-path='{{path}}'>
+	       data-work-subtitle-url='{%url "#subtitle_show" %}' 
+	       data-remove-subtitle-url='{%url "#lsync_subtitle_remove" %}' 
+	       data-trash-subtitle-url='{%url "#lsync_subtitle_trash" %}'>
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
 			<tr><th>Op</th><th>Cover</th><th>Path &amp; Title</th><th>Audios</th><th colpan='3'>Subtitles</th></tr>
