--- a/movies/templates/locations_sync_subtitle.html
+++ b/movies/templates/locations_sync_subtitle.html
@@ -8,9 +8,11 @@
                 <a class="btn btn-mini shift-subtitle" href="#">
                     <i class="icon-wrench"></i>
                 </a>
+                {% if not sub.language %}
                 <a class="btn btn-mini btn-color-red trash-subtitle" href="#">
                     <i class="icon-trash"></i>
                 </a>
+                {%endif%}
             </div>
         {%else%}
             <a class="btn btn-mini btn-color-red remove-subtitle" href="#">
