improved mechanisms for manual download of subtitles

--- a/movies/templates/locations_subtitle_fetch_dialog.html
+++ b/movies/templates/locations_subtitle_fetch_dialog.html
@@ -20,6 +20,9 @@
 					{%endfor%}
 				</select>
 			</label>
+			<label class='checkbox'>
+				<input type="checkbox" name="dir_creation" >Just create the directory structure</input>
+			</label>
 		</div>
 		<div class="modal-footer">
 			<button type="submit" class="btn btn-primary">Fetch subtitles</button>
