subscene site for subtitles

--- a/movies/templates/locations_subtitle_fetch_dialog.html
+++ b/movies/templates/locations_subtitle_fetch_dialog.html
@@ -8,6 +8,7 @@
 			<input type='hidden' name='location.id' value='{{location.id}}'>
 			<input type='hidden' name='location.path' value='{{path}}'>
 			<input type='hidden' name='movie.id'>
+			<input type='hidden' name='title'>
 			<label>
 				<span class='span1'>Title</span>
 				<select name='subtitle' class='span5'></select>
@@ -23,7 +24,10 @@
 			<label class='checkbox'>
 				<input type="checkbox" name="dir_creation" >Just create the directory structure</input>
 			</label>
-		</div>
+<!-- 			<label class='checkbox span3'>
+				<input type="checkbox" name="subscene_com" checked>Use subscene.com</input>
+			</label>
+ -->		</div>
 		<div class="modal-footer">
 			<button type="submit" class="btn btn-primary">Fetch subtitles</button>
 		</div>
