add capability to clean up subtitles

--- a/movies/templates/locations_sync.html
+++ b/movies/templates/locations_sync.html
@@ -36,10 +36,11 @@
 	       data-location-path='{{path}}'
 	       data-info-movie-url='{%url "#locations_sync_info"%}'
 	       data-edit-movie-url='{%url "#locations_sync_edit" %}' 
+	       data-clean-subtitles-url='{%url "#locations_sync_clean" %}'
 	       data-remove-movie-url='{%url "#locations_sync_remove" %}' 
 	       data-work-subtitle-url='{%url "#subtitle_show" %}' 
 	       data-remove-subtitle-url='{%url "#lsync_subtitle_remove" %}' 
-	       data-trash-subtitle-url='{%url "#lsync_subtitle_trash" %}'>
+	       data-trash-subtitle-url='{%url "#lsync_subtitle_trash" %}'>	       
 		<caption>Movies for {{location}} under {{path}}</caption>
 		<thead>
 			<tr><th>Op</th><th>Cover</th><th>Path &amp; Title</th><th>Audios</th><th colpan='3'>Subtitles</th></tr>
