--- a/movies/templates/locations_sync_movie.html
+++ b/movies/templates/locations_sync_movie.html
@@ -44,6 +44,9 @@
                 <a class="btn btn-mini subtitle-choice" href="#">
                     <i class="icon-list"></i>
                 </a>
+                <a class="btn btn-mini clean-subtitles" href="#">
+                    <i class="icon-trash"></i>
+                </a>
             </div>
             <span class='in-subtitles'>{{movie.embedded_subs}}</span>
         </div>
