--- a/movies/templates/subtitles_show.html
+++ b/movies/templates/subtitles_show.html
@@ -1,4 +1,5 @@
 {% extends "generic.html" %}
+{% block title %}Subtitles edit{% endblock %}
 {% block body %}
 
     <div id='subtitles-file-content'> 
