--- a/movies/templates/locations_sync_movie.html
+++ b/movies/templates/locations_sync_movie.html
@@ -12,7 +12,7 @@
     </td>
     <td class='ic_link' rowspan='{{movie.getRowspan}}'>
         {% if movie.imdb_link and movie.image %}
-        <a href='http://www.imdb.com{{movie.imdb_link}}'>
+        <a href='http://www.imdb.com{{movie.imdb_link}}' target='imdb'>
             <img src='{{movie.image}}' class='ic_tooltip_img'>
         </a>
         {%endif%}
