--- a/uquery/static/uquery.css
+++ b/uquery/static/uquery.css
@@ -11,9 +11,8 @@
 /*** lists.html **/
 
 #uquery-icon {
-	width: 80%;
+	width: 100%;
 	margin-bottom: 44px;
-	float: right;
 }
 .uquery-typo{
 	font-family: 'Poiret One', cursive;
@@ -22,18 +21,25 @@
 	margin-top: 2px;
 }
 
+h2.h2title {
+	font-family: 'Poiret One', cursive;
+	font-weight: bold;
+	font-size: 3.2em;
+	padding-left: 32px;
+}
+
 #add-query-modal .modal-footer {
 	border-top: none;
 }
 
-.result-name-in-list {
+.query-title {
 	font-size: 1.15em;
 	font-weight: bold;
-	color: #555;
 }
 
-.query-title {
-	cursor: pointer;
+.query-title a {
+	color: #555;
+	text-decoration: none;
 }
 
 #query-list td {
@@ -46,8 +52,6 @@
 .jumbotron{
 	padding-bottom: 12px;
 }
-
-#home-img {width: 100%}
 
 #refresh-form fieldset { 
     width:inherit; /* Or auto */
@@ -86,6 +90,10 @@ select#size-filter{
 	color: #555;
 	margin-bottom: .5em;
 	margin-top: 4em;
+}
+
+.result-name-recent {
+	background: #E0EBFF;
 }
 
 .tdsize {
