Extracted static/vendor from djmovies

--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -8,19 +8,19 @@
        cosmo: nice, waiting bar not ok
        spruce: very okay
     -->
-    <link href="/static/vendor/bootstrap/css/journal.bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/vendor/messenger/css/messenger.css" rel="stylesheet" media="screen">
-    <link href="/static/vendor/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen">
+    <link href="/static/bootstrap/css/journal.bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/messenger/css/messenger.css" rel="stylesheet" media="screen">
+    <link href="/static/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen">
     <link href="/static/movies.css" rel="stylesheet" media="screen">
   </head>
   <body>
     {% block body %}{% endblock %}
-    <script src="/static/vendor/jquery-2.1.3.min.js"></script>
-    <script src="/static/vendor/jquery.cookie.js"></script>
-    <script src="/static/vendor/json2.js"></script>
-    <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/vendor/messenger/js/messenger.min.js"></script>
-    <script src="/static/vendor/messenger/js/messenger-theme-future.js"></script>
+    <script src="/static/jquery-2.1.3.min.js"></script>
+    <script src="/static/jquery.cookie.js"></script>
+    <script src="/static/json2.js"></script>
+    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/messenger/js/messenger.min.js"></script>
+    <script src="/static/messenger/js/messenger-theme-future.js"></script>
     <script src="/static/movie_edition.js"></script>
     <script src="/static/locations.js"></script>
     <script src="/static/locations_sync.js"></script>
